--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -3,6 +3,10 @@
     padding: 20px;
 }
 
+.about__paragraf {
+    text-align: justify;
+}
+
 /*Verze pro tablet*/
 @media screen and (min-width: 540px) {
 
