--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -28,6 +28,10 @@
     margin: 5px;
 }
 
+.article__content {
+    text-align: justify;
+}
+
 img {
     max-width: 100%;
 }
